syntax = "proto3";

option csharp_namespace = "RepositoryServer";

package user;

service Users {
	rpc CreateUser (CreateUserInput) returns (MessageReply);
	rpc DeleteUser (DeleteUserInput) returns (MessageReply);
	rpc ModifyUser (ModifyUserInput) returns (MessageReply);
}

message DeleteUserInput {
	string email = 1;
}

message ModifyUserInput {
	string email = 1;
	string name = 2;
	string password = 3;
}

message CreateUserInput {
  string name = 1;
  string email = 2;
  string password = 3;
}

message MessageReply {
  string message = 2;
  int32 code = 1; 
}
