syntax = "proto3";

option csharp_namespace = "RepositoryService";

package user;

service Users {
  rpc AddUser (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
